<resources>
    <string name="app_name">Memory</string>
    <string name="strInputAccHint">输入帐号</string>
    <string name="pswInputAccHint">输入密码</string>
    <string name="strAccInputLabel">帐 号： </string>
    <string name="strPswInputLabel">密 码： </string>
    <string name="strEmlInputLabel">邮 箱： </string>
    <string name="strAgeInputLabel">年 龄： </string>
    <string name="strBirthInputLabel">生 日： </string>
    <string name="strContentInputLabel">简 介： </string>
    <string name="login">登 录</string>
    <string name="register">注 册</string>
    <string name="cancle">取 消</string>
    <string name="clear">清 空</string>
    <string name="account_empty">用户名为空，请重新输入！</string>
    <string name="pwd_empty">密码为空，请重新输入！</string>
    <string name="email_empty">邮箱为空，请重新输入！</string>
    <string name="age_empty">年龄为空，请重新输入！</string>
    <string name="birth_empty">生日为空，请重新输入！</string>
    <string name="content_empty">输入内容为空，请重新输入！</string>
    <string name="email_invalid">邮箱不存在，请重新输入！</string>
    <string name="register_fail">注册用户失败，请重新尝试！</string>
    <string name="register_sucess">注册成功！</string>
    <string name="login_sucess">登陆成功！</string>
    <string name="login_fail">登陆失败！请输入正确的用户名与密码！</string>
    <string name="name_already_exist">用户名已存在，请重新输入！</string>
    <string name="user_login_sucess">Welcome to Memory！</string>
    <string name="title_activity_settings2">Settings</string>
    <string name="xzzurl">http://192.168.10.187:8080</string>

    <!--Cropper-->
    <string name="fixedAspectRatio">fixedAspectRatio =\u0020</string>
    <string name="aspectRatioXHeader">aspectRatioX =\u0020</string>
    <string name="aspectRatioYHeader">aspectRatioY =\u0020</string>
    <string name="showGuidelines">showGuidelines =\u0020</string>
    <string name="crop">Crop</string>
    <string name="croppedImageDesc">The cropped image.</string>
    <string-array name="showGuidelinesArray">
        <item>Off</item>
        <item>On Touch</item>
        <item>On</item>
    </string-array>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="title_activity_first">FirstActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="scan_text">将二维码/条形码放入框内</string>

</resources>
